--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -5,52 +5,54 @@ body.po_page_overview #wpwrap{
 body.po_page_overview .sos-wrap{
     max-width: 950px;
     margin: 0 auto;
+    min-height: 100vh;
 }
 body.po_page_overview .no_padding.no_margin{
     padding: 0;
     margin: 0;
 }
 
-#free_bootcamp_header{
+body.po_page_overview .bootcamp_header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 30px;
+    padding: 0 16px;
     user-select: none;
     transition: all 300ms ease;
 }
-#free_bootcamp_header h2.bootcamp_title{
+body.po_page_overview .bootcamp_header h2.bootcamp_title{
     margin: 0;
     padding: 0;
     transition: all 300ms ease;
 }
 
-#free_bootcamp_header.closed{
+body.po_page_overview .bootcamp_header.closed{
     padding: 10px 16px;
     border: 1px solid #e5e5e5;
     background: #fff;
     box-shadow: 0 1px 1px rgb(0 0 0 / 4%);
     border-radius: 8px;
 }
-#free_bootcamp_header.closed h2.bootcamp_title{
+body.po_page_overview .bootcamp_header.closed h2.bootcamp_title{
     font-size: 20px;
 }
 
-#free_bootcamp_header.opened .is_closed,
-#free_bootcamp_header.closed .is_opened{
+body.po_page_overview .bootcamp_header.opened .is_closed,
+body.po_page_overview .bootcamp_header.closed .is_opened{
     display: none;
 }
-#free_bootcamp_header .toggler{
+body.po_page_overview .bootcamp_header .toggler{
     cursor: pointer;
 }
 
-#free_bootcamp_content .tab_complete_wrapper{
+body.po_page_overview .bootcamp_content .tab_complete_wrapper{
     /* margin-top: 20px; */
     text-align: center;
     width: 100%;
     position: relative;
 }
-#free_bootcamp_content .tab_complete_wrapper .mark_tab_complete{
+body.po_page_overview .bootcamp_content .tab_complete_wrapper .mark_tab_complete{
     position: absolute;
     right: 0;
     top: -33px;
