--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -895,7 +895,7 @@ input:checked + .slider:before {
     border-radius: 50%;
 }
 
-table.sos_table{
+table.po_table{
     border-collapse: separate;
     border-spacing: 0 5px;
 }
