--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -642,19 +642,52 @@ body.po_page_overview #overview_summary #licence_section.valid .license-input-fi
 
 
 #search_boxes{
+    background: rgba(198, 255, 205, 0.2);
+    position: relative;
 }
 #search_boxes > th{
-    padding-bottom: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+#search_boxes:after{
+    content: " ";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    background: rgba(54, 148, 81, 0.5);
+}
+#search_boxes > th:first-of-type:after{
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 1px;
+    height: 100%;
+    background: rgba(54, 148, 81, 0.5);
+}
+#search_boxes > th:first-of-type:before{
+    content: " ";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 1px;
+    height: 100%;
+    background: rgba(54, 148, 81, 0.5);
 }
 
 input.search_filter{
-    opacity: 0.5;
+    border: 1px solid #888;
     transition: all 300ms ease;
 }
 input.search_filter:not(:placeholder-shown),
-input.search_filter:focus,
+/* input.search_filter:focus, */
 input.search_filter:hover{
-    opacity: 1;
+    border: 1px solid #666;
 }
 
 .po_table .sort_able{
@@ -876,15 +909,15 @@ input.search_filter:hover{
 .manipulate_filter_options{
     user-select: none;
     cursor: pointer;
+    color: #3A5683;
 }
 .manipulate_filter_options:hover{
-    color: #3A5683;
+    color: #000;
 }
 #hide_filter_options{
     margin-right: 30px;
 }
-#hide_filter_options,
-#clear_filter_options{
+#hide_filter_options{
     display: none;
 }
 
@@ -892,8 +925,14 @@ input.search_filter:hover{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 34px 0 24px;
+    padding: 30px 0 15px;
     margin: 0 15px;
+    background: #ddd;
+    background: rgba(198, 255, 205, 0.2);
+    border: 1px solid rgba(54, 148, 81, 0.5);
+    border-bottom: none;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 #filter_options.hidden{
     display: none;
@@ -979,6 +1018,10 @@ input:checked + .slider:before {
 table.po_table{
     border-collapse: separate;
     border-spacing: 0 5px;
+    margin-top: -5px;
+}
+table.po_table #po_table_header th{
+    padding-top: 20px;
 }
 
 .sos-wrap tbody tr {
