--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -654,15 +654,6 @@ body.po_page_overview #overview_summary #licence_section.valid .license-input-fi
     padding-top: 15px;
     padding-bottom: 15px;
 }
-#search_boxes:after{
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 1px;
-    background: rgba(54, 148, 81, 0.5);
-}
 #search_boxes > th:first-of-type:after{
     content: " ";
     position: absolute;
@@ -681,6 +672,16 @@ body.po_page_overview #overview_summary #licence_section.valid .license-input-fi
     bottom: 0;
     width: 1px;
     height: 100%;
+    background: rgba(54, 148, 81, 0.5);
+}
+#search_boxes th:last-of-type:after{
+    content: " ";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
     background: rgba(54, 148, 81, 0.5);
 }
 
