--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -911,16 +911,18 @@ input.search_filter:hover{
     margin-right: 10px;
 }
 
-.manipulate_filter_options{
+.manipulate_filter_options,
+.manipulate_toggle_columns{
     user-select: none;
     cursor: pointer;
     color: #3A5683;
 }
-.manipulate_filter_options:hover{
+.manipulate_filter_options:hover,
+.manipulate_toggle_columns:hover{
     color: #000;
 }
 #hide_filter_options{
-    margin-right: 30px;
+    margin-right: 10px;
     display: none;
 }
 
@@ -952,6 +954,45 @@ input.search_filter:hover{
     min-height: 32px;
 }
 
+#show_toggle_columns{
+    margin-left: 20px;
+}
+#hide_toggle_columns{
+    margin-left: 20px;
+    display: none;
+}
+
+#toggle_columns{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 30px 0 15px;
+    /* margin: 0 15px; */
+    background: #ddd;
+    background: rgba(198, 255, 205, 0.2);
+    border: 1px solid rgba(54, 148, 81, 0.5);
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+#full_columns_list{
+    margin: 0 40px;
+}
+#full_columns_list .single_column{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 10px;
+}
+#full_columns_list .single_column > div:first-of-type{
+    margin-right: 20px;
+}
+
+#toggle_columns .manipulate_toggle_columns{
+    margin-bottom: 10px;
+}
+#toggle_columns #save_columns_state{
+    margin-top: 10px;
+}
 
 
 /*toggle*/
