--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -1076,8 +1076,15 @@ table.po_table [data-label="checkbox"]{
 table.po_table [data-label="status"]{
     width: 80px;
 }
+table.po_table [data-label="categories"]{
+    width: 220px;
+}
+table.po_table [data-label="belongs_to"]{
+    width: 220px;
+    text-align: center;
+}
 table.po_table [data-label="plugins_tooltip"]{
-    width: 80px;
+    width: 100px;
 }
 table.po_table [data-label="created"],
 table.po_table [data-label="modified"]{
