--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -646,43 +646,9 @@ body.po_page_overview #overview_summary #licence_section.valid .license-input-fi
 
 
 
-#search_boxes{
-    background: rgba(198, 255, 205, 0.2);
-    position: relative;
-}
 #search_boxes > th{
     padding-top: 15px;
     padding-bottom: 15px;
-}
-#search_boxes > th:first-of-type:after{
-    content: " ";
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 1px;
-    height: 100%;
-    background: rgba(54, 148, 81, 0.5);
-}
-#search_boxes > th:first-of-type:before{
-    content: " ";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 1px;
-    height: 100%;
-    background: rgba(54, 148, 81, 0.5);
-}
-#search_boxes th:last-of-type:after{
-    content: " ";
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 1px;
-    background: rgba(54, 148, 81, 0.5);
 }
 
 input.search_filter{
@@ -935,7 +901,7 @@ input.search_filter:hover{
     background: #ddd;
     background: rgba(198, 255, 205, 0.2);
     border: 1px solid rgba(54, 148, 81, 0.5);
-    border-bottom: none;
+    /* border-bottom: none; */
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 }
