--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -807,7 +807,47 @@ input.search_filter:hover{
     margin-top: 35px !important;
     position: relative !important;
 }*/
+#sync-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+.ui-dialog[role="dialog"] {
+  display: flex !important;
+  flex-direction: column !important;
+  align-content: stretch !important;
+  box-shadow: 0px 0px 7px 3px #ccc;
+}
+.ui-button {
+  padding: 5px 15px;
+  padding-right: 15px;
+  padding-left: 15px;
+  text-transform: uppercase;
+  box-shadow: -1px 1px 0 rgba(255, 255, 255, 0.55), inset 0 0 0 2px rgba(255, 255, 255, 0.3);
+  border: 1px solid #689530 !important;
+  background-color: #369451 !important;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%) !important;
+  border-radius: 4px !important;
+  color: white !important;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
+.ui-widget-header {
+  padding: 6px 15px;
+}
+.ui-dialog-buttonset {
+  padding: 6px 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #e9e9e9;
+}
 
+.ui-widget-content {
+  border: none !important;
+}
 #result_search > *{
     font-size: 18px;
 }
