--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -1077,7 +1077,11 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
-
+th[data-label="triggers"],
+th[data-label="title"] {
+    min-width: 150px !important;
+    width: 150px;
+}
 table.po_table{
     border-collapse: separate;
     border-spacing: 0 5px;
