--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -477,7 +477,7 @@ body.po_page_overview .hidden-info_overview .row > .col-6:last-of-type h4{
 /*.sos-wrap table *:not(span):not(a) {
     padding: 10px;
 }*/
-
+/*
 .sos-wrap thead th {
     color: #285483;
     font-size: 18px;
@@ -495,7 +495,7 @@ body.po_page_overview .hidden-info_overview .row > .col-6:last-of-type h4{
 }
 .sos-wrap tbody td {
     padding: 10px;
-}
+}*/
 
 .align-left{
     text-align: left;
@@ -1079,7 +1079,7 @@ input:checked + .slider:before {
 }
 th[data-label="triggers"],
 th[data-label="title"] {
-    min-width: 150px !important;
+    min-width: 150px;
     width: 150px;
 }
 th[data-label="title"] {
@@ -1670,4 +1670,33 @@ input::placeholder{
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.trashbutton {
+  color: #000;
+}
+.trashbutton:active,
+.trashbutton:hover {
+  color: #c10d0d;
+}
+
+.po_table.groups {
+  min-width: 
+}
+.po_table.groups thead th:nth-child(2) {
+  width: 60px !important;
+  min-width: 160px;
+  max-width: 400px;
+}
+.po_table.groups tbody td:nth-child(2) {
+  width: 160px !important;
+  min-width: 160px;
+  max-width: 400px;
+}
+.po_table.groups thead th:nth-child(3) {
+  width: 170px !important;
+  max-width: 400px;
+}
+.po_table.groups thead th:nth-child(4) {
+  width: 150px;
 }
