--- a/admin/css/po-admin-public.css
+++ b/admin/css/po-admin-public.css
@@ -177,3 +177,26 @@ body.po_is_blocking_plugins ul#adminmenu .wp-menu-image img{
   padding: 8px 0;
   overflow-y: auto;
 }
+
+.po_blue_button {
+  padding: 3px 15px;
+  text-transform: uppercase;
+  box-shadow: -1px 1px 0 rgb(255 255 255 / 55%), inset 0 0 0 2px rgb(255 255 255 / 30%);
+  border: 1px solid #3A5683;
+  background-color: #5A76A3;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%);
+  border-radius: 4px;
+  color: white;
+  line-height: 1.5;
+  cursor: pointer;
+  transition: all 300ms ease;
+  font-size: 1.3em; 
+}
+.test-filter-container {
+  margin-bottom: 25px;
+  margin-left: 5px;
+}
+.po_blue_button:hover {
+    background-image: none;
+    color: #fff;
+}
