--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -1213,6 +1213,19 @@ select[name="block_plugins"], select[name="block_group_plugins"], select[name="p
     padding: 7px 20px 0;
     transition: all 300ms ease;
 }
+#main_tab_navigation > div.tabs span {
+    font-size: 12px;
+    background-color: #f3a902;
+    color: #fff;
+    display: inline-block;
+    padding: 1px 4px;
+    font-weight: bold;
+    position: relative;
+    top: -2px;
+    right: -3px;
+    border-radius: 3px;
+}
+
 #main_tab_navigation > div.tabs:not(.current) {
     background-color: #f1f1f1;
     background-color: rgba(198, 185, 205, 0.1);
@@ -1589,38 +1602,6 @@ input::placeholder{
     padding: 5px !important;
     height: 43px;
 }
-#scan-container .button-col {
-
-}
-#scan-container .results span {
-  color: #dd1717;
-}
-#scan-container .results strong {
-  display: inline-block;
-  text-transform: none;
-  padding-top: 10px;
-}
-#scan-container .message-col {
-  font-size: 18px;
-  text-transform: none;
-  padding-top: 0;
-  padding-left: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-#scan-container {
-  display: flex;
-  flex-direction: row;
-  font-size: 20px;
-  text-transform: uppercase;
-  margin-top: 15px;
-  border: 1px solid #e5e5e5;
-  background: #fff;
-  box-shadow: 0 1px 1px rgb(0 0 0 / 4%);
-  border-radius: 8px;
-  padding: 20px;
-}
 
 #wpbody #scan-now {
   width: 140px;
@@ -1706,4 +1687,30 @@ option:disabled {
     background-color: #ddd;
     color: #6c6c6c;
     font-style: italic;
+}
+
+.premium-only-box p {
+    font-size:  26px;
+    font-weight:  strong;}
+.premium-only-box {
+    max-width:  800px;
+    border:  1px solid #000;
+    padding:  30px 30px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+}
+.toplevel_page_plugin_optimizer .wp-submenu li span {
+    font-size: 12px;
+    background-color: #f3a902;
+    color: #fff;
+    display: inline-block;
+    padding: 1px 4px;
+    font-weight: bold;
+    position: relative;
+    top: 1px;
+    right: -3px;
+    border-radius: 3px;
 }
